--- a/ansible/mariadb_backup.yml
+++ b/ansible/mariadb_backup.yml
@@ -4,4 +4,4 @@
   roles:
     - { role: mariadb,
         tags: mariadb,
-        when: enable_xtrabackup | bool }
+        when: enable_mariabackup | bool }
