--- a/ansible/roles/mariadb/defaults/main.yml
+++ b/ansible/roles/mariadb/defaults/main.yml
@@ -72,9 +72,9 @@ mariadb_service: "{{ mariadb_services['mariadb'] }}"
 ####################
 # Backups
 ####################
-xtrabackup_image: "{{ docker_registry ~ '/' if docker_registry else '' }}{{ docker_namespace }}/{{ kolla_base_distro }}-{{ mariadb_install_type }}-xtrabackup"
-xtrabackup_tag: "{{ openstack_release }}"
-xtrabackup_image_full: "{{ xtrabackup_image }}:{{ xtrabackup_tag }}"
+mariabackup_image: "{{ docker_registry ~ '/' if docker_registry else '' }}{{ docker_namespace }}/{{ kolla_base_distro }}-{{ mariadb_install_type }}-mariadb"
+mariabackup_tag: "{{ openstack_release }}"
+mariabackup_image_full: "{{ mariabackup_image }}:{{ mariabackup_tag }}"
 
 mariadb_backup_host: "{{ groups['mariadb'][0] }}"
 mariadb_backup_database_schema: "PERCONA_SCHEMA"
