--- a/etc/kolla/globals.yml
+++ b/etc/kolla/globals.yml
@@ -296,6 +296,7 @@
 #enable_manila_backend_hnas: "no"
 #enable_manila_backend_cephfs_native: "no"
 #enable_manila_backend_cephfs_nfs: "no"
+#enable_mariabackup: "no"
 #enable_masakari: "no"
 #enable_mistral: "no"
 #enable_monasca: "no"
@@ -346,7 +347,6 @@
 #enable_vitrage: "no"
 #enable_vmtp: "no"
 #enable_watcher: "no"
-#enable_xtrabackup: "no"
 #enable_zookeeper: "{{ enable_kafka | bool }}"
 #enable_zun: "no"
 
