Fix deploy-containers command for mariadb
The MariaDB handlers require master_host to be set.

TrivialFix

Change-Id: I162efbd9e615b86dcdc6e8a4af081cda2f8b0b2b

--- a/ansible/roles/mariadb/tasks/bootstrap.yml
+++ b/ansible/roles/mariadb/tasks/bootstrap.yml
@@ -1,5 +1,6 @@
 ---
-- set_fact:
+- name: Set a fact about the master host
+  set_fact:
     master_host: "{{ groups['mariadb'][0] }}"
 
 - include_tasks: lookup_cluster.yml
