--- a/ansible/roles/mariadb/tasks/deploy-containers.yml
+++ b/ansible/roles/mariadb/tasks/deploy-containers.yml
@@ -1,2 +1,6 @@
 ---
+- name: Set a fact about the master host
+  set_fact:
+    master_host: "{{ groups['mariadb'][0] }}"
+
 - import_tasks: check-containers.yml
