CI: install Python 3 package
Needed for https://review.opendev.org/#/c/691316

Change-Id: I64e250eb15882f50ecbbc57b87e036f5772f7e3a

--- a/tests/run.yml
+++ b/tests/run.yml
@@ -180,6 +180,12 @@
         - all
       delegate_to: "{{ item }}"
 
+    - name: Install Python 3 package for Kolla
+      package:
+        name: python3
+      when:
+        need_build_image
+
     # NOTE(mgoddard): We are using the script module here and later to ensure
     # we use the local copy of these scripts, rather than the one on the remote
     # host, which could be checked out to a previous release (in an upgrade
