Fix haproxy deploy for external mariadb cluster
Change-Id: I12fa6ae8dcec79485c30c4fea2977875aa8f4fae
Closes-Bug: #1850792

--- a/ansible/roles/mariadb/defaults/main.yml
+++ b/ansible/roles/mariadb/defaults/main.yml
@@ -24,7 +24,7 @@ mariadb_services:
           - "option mysql-check user haproxy post-41"
         custom_member_list: "{{ internal_haproxy_members.split(';') }}"
       mariadb_external_lb:
-        enabled: "{{ enable_mariadb|bool and enable_external_mariadb_load_balancer|bool }}"
+        enabled: "{{ enable_external_mariadb_load_balancer|bool }}"
         mode: "tcp"
         port: "{{ database_port }}"
         listen_port: "{{ mariadb_port }}"
