--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -240,7 +240,7 @@
             role: mariadb
             tasks_from: loadbalancer
           tags: mariadb
-          when: enable_mariadb | bool
+          when: enable_mariadb | bool or enable_external_mariadb_load_balancer | bool
         - include_role:
             role: masakari
             tasks_from: loadbalancer
