CI: use become to install python3
Commit 73b6a66fd4db4345e5c1ed8acf2f3d10170bfdd4 added installation of
Python 3 package. But without root permissions it fails.

Change-Id: I65ca794955a1b1419853bf63be36cb0d1f2d2345

--- a/tests/run.yml
+++ b/tests/run.yml
@@ -185,6 +185,7 @@
         name: python3
       when:
         need_build_image
+      become: true
 
     # NOTE(mgoddard): We are using the script module here and later to ensure
     # we use the local copy of these scripts, rather than the one on the remote
