--- a/ansible/roles/haproxy/tasks/precheck.yml
+++ b/ansible/roles/haproxy/tasks/precheck.yml
@@ -259,6 +259,19 @@
     - haproxy_stat.find('cloudkitty_api') == -1
     - "host_running_haproxy == 'None'"
 
+- name: Checking free port for Octopus API HAProxy
+  wait_for:
+    host: "{{ kolla_internal_vip_address }}"
+    port: "{{ octopus_api_port }}"
+    connect_timeout: 1
+    timeout: 1
+    state: stopped
+  when:
+    - enable_octopus | bool
+    - inventory_hostname in groups['haproxy']
+    - haproxy_stat.find('octopus_api') == -1
+    - "host_running_haproxy == 'None'"
+
 - name: Checking free port for Congress API HAProxy
   wait_for:
     host: "{{ kolla_internal_vip_address }}"
