--- a/etc/kolla/passwords.yml
+++ b/etc/kolla/passwords.yml
@@ -100,6 +100,8 @@ cinder_keystone_password:
 
 cloudkitty_database_password:
 cloudkitty_keystone_password:
+octopus_database_password:
+octopus_keystone_password:
 
 cyborg_database_password:
 cyborg_keystone_password:
